Nwes category elipsis

--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -77,6 +77,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    flex-basis: 60%;
     font-weight: 700;
     color: @gray-light;
     text-transform: uppercase;
