--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -1,6 +1,7 @@
 /*
 * KU tiles mixin
 */
+
 .tiles-x-layout() {
   // Tiles format
   .tilebox {
@@ -30,6 +31,10 @@
 
   .tile-body {
     display: none;
+  }
+
+  .header-small {
+    flex-basis: 60%;
   }
 
   .tile-img {
@@ -79,14 +84,17 @@
     display: flex;
     flex-direction: column;
     border-bottom: 1px solid @gray;
+  }
 
-    .tile-content {
-      width: 100%;
-    }
+  .tile-content {
+    width: 100%;
+  }
+
+  .header-small {
+    flex-basis: 72%;
   }
 
   .tile-img {
-    // flex: none;
     margin-bottom: 10px;
   }
   @media all and (max-width: @screen-xs-max) {
