--- a/docs/assets/css/print/print.css
+++ b/docs/assets/css/print/print.css
@@ -171,7 +171,7 @@ ol.org-chart li>div {
   float: left;
   border: 1px solid #ddd;
   height: 367px!important;
-  width: 40%!important;
+  width: 367px!important;
   margin-right: 15px;
 }
 
