--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -44,6 +44,7 @@
   text-decoration: none!important;
   width: 100%;
   height: 100%;
+  min-height: 1px;
   color: @text-color;
 
   &:hover,
@@ -118,8 +119,6 @@
 @media all and (min-width: @screen-md) {
   .single-column {
     .tiles-x {
-      height: auto;
-
       &:not(.tiles-plugin) {
         .tile-header {
           font-size: 26px;
@@ -274,6 +273,24 @@ body:not(.FullWidthFrontpage) .double-column {
   .tiles-x {
     .tilebox {
       height: @special-tiles-hight;
+    }
+  }
+}
+// Special styling for IE11:
+@media all and (min-width: @screen-sm) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .single-column {
+    .tiles-x {
+      // .tilebox {
+      //   height: 690px;
+      // }
+
+      .tile-img {
+        flex: 1 0 auto;
+      }
+
+      .tile-content {
+        flex: 1 1 auto;
+      }
     }
   }
 }
