--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -214,14 +214,14 @@ body:not(.FullWidthFrontpage) .double-column {
       }
     }
 
-    .FullWidthFrontpage .triple-column,
-    .double-column & {
-      .tiles-x {
-        .tilebox {
-          height: @special-tiles-hight;
-        }
-      }
-    }
+    // .FullWidthFrontpage .triple-column,
+    // .double-column & {
+    //   .tiles-x {
+    //     .tilebox {
+    //       height: @special-tiles-hight;
+    //     }
+    //   }
+    // }
   }
 }
 // Special styling for IE11:
