--- a/docs/assets/css/print/print.css
+++ b/docs/assets/css/print/print.css
@@ -17,8 +17,8 @@ html, body {
 
 body {
   /* width: 210mm;
-  height: 297mm;
-  margin: 10mm auto;*/
+  height: 297mm;*/
+  margin: 20mm auto;
   font-size: 13px !important;
 }
 
@@ -116,10 +116,6 @@ pre, blockquote {
 
 .table {
   border-collapse: collapse !important;
-}
-
-.table td, .table th {
-  background-color: #fff !important;
 }
 
 .table-bordered th, .table-bordered td {
