Tiles min height

--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -8,7 +8,7 @@
 
   &.tiles-x {
     .tilebox {
-      margin-bottom: 23px;
+      margin-bottom: @grid-gutter-height;
     }
     @media (max-width: @screen-xs-max) {
       .tilebox {
