--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    min-height: 1px;
     overflow: hidden;
     background-color: @white-color;
     box-shadow: 0 0 0 1px @gray-ddd;
