--- a/docs/assets/css/print/print.css
+++ b/docs/assets/css/print/print.css
@@ -1,6 +1,6 @@
 @page {
   size: auto;
-  margin: 5mm;
+  margin: 15mm 5mm 15mm 5mm;
 }
 
 *, *:before, *:after {
@@ -17,8 +17,8 @@ html, body {
 
 body {
   /* width: 210mm;
-  height: 297mm;*/
-  margin: 20mm auto;
+  height: 297mm;
+  margin: 10mm auto;*/
   font-size: 13px !important;
 }
 
@@ -116,6 +116,10 @@ pre, blockquote {
 
 .table {
   border-collapse: collapse !important;
+}
+
+.table-striped>tbody>tr:nth-of-type(odd) {
+    background-color: #eee!important;
 }
 
 .table-bordered th, .table-bordered td {
