--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -312,3 +312,17 @@ body:not(.FullWidthFrontpage) .double-column {
     }
   }
 }
+// Special styling for IE Edge
+@media all and (min-width: @screen-sm) {
+  @supports (-ms-ime-align: auto) {
+    .single-column {
+      .tiles-x {
+        &:not(.tiles-plugin) {
+          .tile-content {
+            flex: 0 1 auto;
+          }
+        }
+      }
+    }
+  }
+}
