Double tiles image height

--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -179,6 +179,14 @@ body:not(.FullWidthFrontpage) .double-column {
       .tilebox {
         height: @special-tiles-hight;
 
+        .tile-img {
+          flex: 1 1 60%;
+        }
+
+        .tile-content {
+          flex: 1 1 40%;
+        }
+
         .tile-body {
           display: block;
         }
