Simplify signup form

--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -453,3 +453,10 @@ form.gdpr-accept {
     bottom: -25px;
   }
 }
+
+#symplifysignupform {
+  .gdpr-accept {
+    position: relative;
+    margin-left: 0;
+  }
+}
