--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -179,13 +179,13 @@ body:not(.FullWidthFrontpage) .double-column {
       .tilebox {
         height: @special-tiles-hight;
 
-        .tile-img {
-          flex: 1 1 55%;
-        }
-
-        .tile-content {
-          flex: 1 1 45%;
-        }
+        // .tile-img {
+        //   flex: 1 1 55%;
+        // }
+        //
+        // .tile-content {
+        //   flex: 1 1 45%;
+        // }
 
         .tile-body {
           display: block;
