Reveal global news img

--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -178,8 +178,9 @@
     }
 
     img {
-      width: 55px;
-      height: 55px;
+      // width: 55px;
+      // height: 55px;
+      display: none;
     }
 
     .mm-btn_next {
