--- a/less/navbar.less
+++ b/less/navbar.less
@@ -371,8 +371,7 @@
         display: block;
         width: 100%;
         min-width: 350px;
-        //padding: 5px 10px 5px 7px;
-        padding: 5px 10px 5px 10px;
+        padding: 5px 10px 5px 7px;
         overflow: hidden;
         white-space: normal;
 
@@ -389,8 +388,7 @@
         }
 
         img {
-          display: none;
-          //display: block;
+          display: block;
           float: left;
           margin: 0 8px 5px 0;
         }
@@ -400,8 +398,7 @@
         }
 
         &.no-track {
-          //padding-left: 20px;
-          padding-left: 10px;
+          padding-left: 20px;
         }
 
         &:last-child {
