Simplify grid element

--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -459,4 +459,13 @@ form.gdpr-accept {
     position: relative;
     margin-left: 0;
   }
+
+  .form-group legend {
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 0;
+    border-bottom: 0;
+    font-weight: 600;
+    font-size: inherit;
+  }
 }
