--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -468,4 +468,13 @@ form.gdpr-accept {
     font-weight: 600;
     font-size: inherit;
   }
+
+  .error {
+    padding: 10px;
+    margin-bottom: 19px;
+    color: @state-danger-text;
+    background-color: @state-danger-bg;
+    border: 1px solid @state-danger-border;
+    border-radius: @border-radius-base;
+  }
 }
