--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -85,12 +85,6 @@
   // top + bottom shadow
   box-shadow: 0 -24px 30px 0 rgba(@gray-base,.3), 0 24px 30px 0 rgba(@gray-base,.3);
 
-  h1 {
-    font-size: 46px;
-    font-weight: 600;
-    text-transform: uppercase;
-  }
-
   .block-content {
     font-size: 14px;
     padding: 10px 20px;
@@ -182,6 +176,12 @@
       font-size: 18px;
       padding: 30px 0;
     }
+
+    h1 {
+      font-size: 46px;
+      font-weight: 600;
+      text-transform: uppercase;
+    }
   }
 
   .block-bg {
@@ -210,6 +210,5 @@
 }
 
 #warning-banner {
-  position: relative;
-  top: 69px;
+  display: none;
 }
