New global flags

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -711,13 +711,13 @@
 
       &.english {
         &::after {
-          background-image: transparent url("https://cms.ku.dk/grafik/obvius/flag-uk.svg");
+          background-image: url("https://cms.ku.dk/grafik/obvius/flag-uk.svg");
         }
       }
 
       &.dansk {
         &::after {
-          background-image: transparent url("https://cms.ku.dk/grafik/obvius/flag-dk.svg");
+          background-image: url("https://cms.ku.dk/grafik/obvius/flag-dk.svg");
         }
       }
     }
