--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -212,3 +212,17 @@
 #warning-banner {
   display: none;
 }
+
+.slick-pause {
+  left: 1%;
+  right: auto;
+  bottom: auto;
+  top: 10px;
+}
+
+.slick-sound {
+  left: 50%;
+  bottom: 1%;
+  transform: translate(-50%, -50%);
+  margin: 0 auto;
+}
