--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -213,16 +213,23 @@
   display: none;
 }
 
-.slick-pause {
-  left: 1%;
-  right: auto;
-  bottom: auto;
-  top: 10px;
+.parallax-buttons {
+  position: absolute;
+  left: 50%;
+  bottom: 20px;
+  transform: translateX(-50%);
+  margin: 0 auto;
 }
 
-.slick-sound {
-  left: 50%;
-  bottom: 1%;
-  transform: translate(-50%, -50%);
-  margin: 0 auto;
+.parallax-pause,
+.parallax-sound {
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  font-size: 60px;
+  color: #fff;
+}
+
+.parallax-sound {
+  margin-left: @grid-gutter-width;
 }
