--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -117,10 +117,6 @@
     flex-direction: row;
     align-items: flex-end;
   }
-  // .slick-pause {
-  //   right: 2%;
-  //   bottom: 5%;
-  // }
 }
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   /* IE 11 only in order to understand vertical alignment */
@@ -146,6 +142,11 @@
     padding: 15px;
     background: rgba(@white-color, .7);
   }
+}
+
+.jarallax {
+    position: relative;
+    z-index: 0;
 }
 
 .jarallax-img {
@@ -232,4 +233,11 @@
 
 .parallax-sound {
   margin-left: @grid-gutter-width;
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  // IE11
+  .jarallax-keep-img>.jarallax-img {
+    z-index: 0;
+  }
 }
