--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -145,8 +145,8 @@
 }
 
 .jarallax {
-    position: relative;
-    z-index: 0;
+  position: relative;
+  z-index: 0;
 }
 
 .jarallax-img {
@@ -227,17 +227,22 @@
   background: transparent;
   border: 0;
   cursor: pointer;
-  font-size: 60px;
-  color: #fff;
+  color: @white-color;
+  line-height: 1;
+}
+
+.parallax-pause {
+  font-size: 54px;
 }
 
 .parallax-sound {
+  font-size: 60px;
   margin-left: @grid-gutter-width;
+  vertical-align: top;
 }
-
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   // IE11
-  .jarallax-keep-img>.jarallax-img {
+  .jarallax-keep-img > .jarallax-img {
     z-index: 0;
   }
 }
