--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -134,10 +134,9 @@
 .block-bg {
   color: @text-color;
   min-height: 100vh;
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: 50% 0;
-  // box-shadow: none;
+  // background-attachment: fixed;
+  // background-size: cover;
+  // background-position: 50% 0;
   .block-content {
     padding: 15px;
     background: rgba(@white-color, .7);
