--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -12,7 +12,8 @@
 }
 
 .progress-fixed-top .progress-bar {
-  background-color: @ku-red;
+  --scroll: 0;
+  background: linear-gradient(to right, rgb(@ku-red) var(--scroll), transparent 0);
 }
 
 .ku-topbar {
