--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -118,6 +118,11 @@
     flex-direction: row;
     align-items: flex-end;
   }
+
+  .no-bg {
+    background: none;
+    box-shadow: none;
+  }
 }
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   /* IE 11 only in order to understand vertical alignment */
@@ -148,21 +153,17 @@
   position: relative;
   z-index: 0;
 }
-
-.jarallax-img {
-  position: absolute;
-  object-fit: cover;
-  top: 0;
-  left: 0;
-  width: 100%;
-  min-height: 100%;
-  height: 100%;
-  // Try to minimize flickering:
-  will-change: transform;
-  //backface-visibility: hidden;
-  transform-origin: 100% 100% 0;
-  transform-style: preserve-3d;
-}
+// .jarallax-img {
+    // position: absolute;
+    // object-fit: cover;
+    /* support for plugin https://github.com/bfred-it/object-fit-images */
+    // font-family: 'object-fit: cover;';
+    // top: 0;
+    // left: 0;
+    // width: 100%;
+    // height: 100%;
+    // z-index: -1;
+// }
 @media all and (min-width: @screen-sm) {
   #content {
     margin-top: 68px;
@@ -189,13 +190,6 @@
     .block-content {
       padding: 30px;
       box-shadow: 0 1px 8px rgba(@gray-base, .1), 0 16px 48px rgba(@gray-base, .1), 0 24px 60px rgba(@gray-base, .1);
-    }
-  }
-
-  .campaign-block {
-    .no-bg {
-      background: none;
-      box-shadow: none;
     }
   }
 }
@@ -239,10 +233,4 @@
   font-size: 60px;
   margin-left: @grid-gutter-width;
   vertical-align: top;
-}
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  // IE11
-  .jarallax-keep-img > .jarallax-img {
-    z-index: 0;
-  }
 }
