--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -57,7 +57,7 @@
 .tile-header {
   font-size: 17.42px;
   font-weight: 600;
-  line-height: 1.3;
+  line-height: 1.25;
   margin-top: 0;
 }
 
@@ -178,7 +178,6 @@ body:not(.FullWidthFrontpage) .double-column {
     .tiles-x:not(.tiles-plugin) {
       .tilebox {
         height: @special-tiles-hight;
-
         // .tile-img {
         //   flex: 1 1 55%;
         // }
@@ -186,7 +185,6 @@ body:not(.FullWidthFrontpage) .double-column {
         // .tile-content {
         //   flex: 1 1 45%;
         // }
-
         .tile-body {
           display: block;
         }
@@ -220,6 +218,12 @@ body:not(.FullWidthFrontpage) .double-column {
           height: auto;
         }
       }
+    }
+  }
+
+  .topnews {
+    & > .deloverskrift {
+      margin-top: 70px;
     }
   }
 }
