Object fit for IE11

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -46,3 +46,4 @@
 @import "mixins/ku-gridbox-mixins.less";
 @import "mixins/ku-news.less";
 @import "mixins/ku-tiles.less";
+@import "mixins/ku-object-fit.less";
