--- a/docs/_includes/components/ku-factbox.html
+++ b/docs/_includes/components/ku-factbox.html
@@ -2,18 +2,18 @@
   <h1 id="ku-factboxes" class="page-header">KU fact boxes</h1>
   <p>Component for facts. Use in articles.</p>
   <div class="bs-example" data-example-id="ku-factboxes">
-    <aside class="factbox">
+    <aside class="factbox" aria-label="Faktaboks">
       <div class="fact-title">Lorem Ipsum!</div>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae enim non nibh egestas egestas. In hac habitasse platea dictumst. Duis tempus ipsum in arcu sodales varius.
     </aside>
   </div>
   {% highlight html %}
-  <aside class="factbox">
+  <aside class="factbox" aria-label="...">
     <div class="fact-title">Lorem Ipsum!</div>
     Lorem ipsum...
   </aside>
   {% endhighlight %}
-  Use <code>&lt;div class=&quot;factbox factbox-left&quot;&gt;</code> in order to left align the fact box.
+  Use <code>&lt;aside class=&quot;factbox factbox-left&quot;&gt;</code> in order to left align the fact box.
 </div>
 <div class="bs-docs-section">
   <h1 id="ku-quoteboxes" class="page-header">KU quote box</h1>
