--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -145,25 +145,26 @@
   // background-position: 50% 0;
   .block-content {
     padding: 15px;
-    background: rgba(@white-color, .7);
+    background: rgba(@white-color, .8);
   }
 }
 
 .jarallax {
   position: relative;
   z-index: 0;
+
+  &> .jarallax-img {
+    position: absolute;
+    object-fit: cover;
+    // IE11 support for plugin https://github.com/bfred-it/object-fit-images
+    font-family: 'object-fit: cover;';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
 }
-// .jarallax-img {
-// position: absolute;
-// object-fit: cover;
-/* support for plugin https://github.com/bfred-it/object-fit-images */
-// font-family: 'object-fit: cover;';
-// top: 0;
-// left: 0;
-// width: 100%;
-// height: 100%;
-// z-index: -1;
-// }
 
 #warning-banner {
   display: none;
@@ -206,7 +207,7 @@
 
     .block-content {
       max-width: 746px;
-      font-size: 18px;
+      font-size: 20px;
       padding: 30px 0;
     }
 
