--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -216,14 +216,17 @@
       font-weight: 600;
       line-height: 1.2;
       text-transform: uppercase;
+      margin-top: 0;
     }
 
     h2 {
-      font-size: 30px;
+      font-size: 40px;
+      margin-top: 0;
     }
 
     h3 {
-      font-size: 24px;
+      font-size: 30px;
+      margin-top: 0;
     }
   }
 
