--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -153,7 +153,7 @@
   position: relative;
   z-index: 0;
 
-  & > .jarallax-img {
+  .jarallax-img {
     position: absolute;
     object-fit: cover;
     // IE11 support for plugin https://github.com/bfred-it/object-fit-images
@@ -212,7 +212,7 @@
     }
 
     h1 {
-      font-size: 46px;
+      font-size: 56px;
       font-weight: 600;
       line-height: 1.2;
       text-transform: uppercase;
@@ -227,6 +227,12 @@
     h3 {
       font-size: 30px;
       margin-top: 0;
+    }
+
+    .manchet {
+      font-size: 30px;
+      font-weight: 600;
+      line-height: 1.2;
     }
   }
 
