--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -93,6 +93,12 @@
     width: 100%;
     z-index: 0;
 
+    h1 {
+      text-transform: uppercase;
+    }
+
+    h1,
+    h2,
     h3 {
       margin-top: 0;
     }
@@ -213,20 +219,16 @@
 
     h1 {
       font-size: 56px;
-      font-weight: 600;
+      font-weight: 700;
       line-height: 1.2;
-      text-transform: uppercase;
-      margin-top: 0;
     }
 
     h2 {
       font-size: 40px;
-      margin-top: 0;
     }
 
     h3 {
       font-size: 30px;
-      margin-top: 0;
     }
 
     .manchet {
