--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -89,6 +89,8 @@
   }
 
   .block-content {
+    display: flex;
+    flex-direction: row;
     font-size: 16px;
     padding: 10px 20px;
     margin: 10px 0;
@@ -220,6 +222,7 @@
       max-width: 746px;
       font-size: 20px;
       padding: 30px 0;
+      flex-direction: column;
     }
 
     h1 {
