--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -48,6 +48,15 @@
   }
 }
 
+.parallax-logo {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  height: 82px;
+  width: 61px;
+  z-index: 100;
+}
+
 #content {
   margin-top: 42px;
 }
@@ -73,7 +82,7 @@
   color: @white-color;
   flex-direction: column;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   position: relative;
   z-index: 0;
@@ -84,8 +93,10 @@
   margin-left: -50vw;
   margin-right: -50vw;
   // top + bottom shadow
+  box-shadow: 0 -24px 30px 0 rgba(@gray-base,.3), 0 24px 30px 0 rgba(@gray-base,.3);
+
   &.jarallax {
-    box-shadow: 0 -24px 30px 0 rgba(@gray-base,.3), 0 24px 30px 0 rgba(@gray-base,.3);
+    box-shadow: none;
   }
 
   .block-content {
@@ -208,6 +219,10 @@
   vertical-align: top;
 }
 @media all and (min-width: @screen-sm) {
+  .parallax-logo {
+    top: 10px;
+    bottom: auto;
+  }
   #content {
     margin-top: 68px;
   }
@@ -215,6 +230,7 @@
   .campaign-block {
     /* Take desktop scrollbar into account: */
     width: calc(100vw - 9px);
+    justify-content: center;
 
     .block-content {
       max-width: 746px;
