--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -49,7 +49,7 @@
 }
 
 .parallax-logo {
-  position: fixed;
+  position: absolute;
   bottom: 10px;
   left: 10px;
   height: 82px;
@@ -222,6 +222,7 @@
 }
 @media all and (min-width: @screen-sm) {
   .parallax-logo {
+    position: fixed;
     top: 10px;
     bottom: auto;
   }
