--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -112,6 +112,11 @@
       line-height: 1.1;
     }
 
+    h2 {
+      font-weight: 600;
+      font-size: 26px;
+    }
+
     h1,
     h2,
     h3 {
@@ -226,6 +231,7 @@
     top: 10px;
     bottom: auto;
   }
+
   #content {
     margin-top: 68px;
   }
