--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -106,45 +106,46 @@
     width: 100%;
     z-index: 0;
 
-    h1 {
-      text-transform: uppercase;
-      font-weight: 700;
-      line-height: 1.1;
-    }
-
-    h2 {
-      font-weight: 600;
-      font-size: 26px;
-    }
-
-    h1,
-    h2,
-    h3 {
-      margin-top: 0;
-    }
-
-    blockquote {
-      font-size: 28px;
-      font-weight: 600;
-      line-height: 1.2;
-
-      &:before {
-        font-size: 80px;
-        color: inherit;
-      }
-
-      footer {
-        color: inherit;
-      }
-    }
-
     &.no-bg {
       background: none;
       box-shadow: none;
     }
   }
 
+  h1 {
+    text-transform: uppercase;
+    font-weight: 700;
+    line-height: 1.1;
+  }
+
+  h2 {
+    font-weight: 600;
+    font-size: 26px;
+  }
+
+  h1,
+  h2,
+  h3 {
+    margin-top: 0;
+  }
+
+  blockquote {
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 1.2;
+
+    &:before {
+      font-size: 80px;
+      color: inherit;
+    }
+
+    footer {
+      color: inherit;
+    }
+  }
+
   &.top-right {
+    // Place textbox at the top right
     align-items: flex-end;
     justify-content: start;
   }
