--- a/less/faculties/science.less
+++ b/less/faculties/science.less
@@ -165,7 +165,6 @@
   .two-one-one-column .column1 {
     .gridbox {
       &.outlined {
-
         &.subcolor_1 {
           &::before {
             color: @science-sub_1;
@@ -243,6 +242,7 @@
   }
 }
 // Slick slider colors
+
 .slick-slide {
   .subcolor_1 {
     background: @science-sub_1;
@@ -290,5 +290,25 @@
     &.full-bg {
       background: @science-sub_4;
     }
+  }
+}
+// Videntjenesten
+
+#geonatloginform,
+.Geonat-Login .LoginLinks {
+  background: #f3f3f3;
+  padding: 5px;
+  overflow: hidden;
+  margin: 0;
+}
+
+#geonatloginform {
+  .form-group {
+    margin-bottom: 8px;
+  }
+
+  .checkbox {
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 }
