--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -55,8 +55,10 @@
   height: 82px;
   width: 61px;
   z-index: 10;
+}
 
-  & ~ .mm-menu_opened & {
+.mm-menu_opened {
+  & ~.parallax-logo {
     z-index: 0;
   }
 }
