--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -136,13 +136,11 @@
   }
 
   blockquote {
-    font-size: 28px;
-    font-weight: 600;
+    font-size: 1.4;
     line-height: 1.2;
 
     &:before {
-      font-size: 80px;
-      color: inherit;
+      font-size: 3em;
     }
 
     footer {
