--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -1,3 +1,9 @@
+// KU cookie accept box1
+.ccc-popup {
+  z-index: 2;
+}
+
+
 // KU privacy policy box
 @media (min-width: @screen-xs-max) {
   .privacy-policy {
