--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -136,11 +136,11 @@
   }
 
   blockquote {
-    font-size: 1.4em;
-    line-height: 1.2;
+    font-size: 1.3em;
+    line-height: 1.35;
 
     &:before {
-      font-size: 3em;
+      font-size: 2.7em;
     }
 
     footer {
@@ -207,7 +207,7 @@
 .parallax-buttons {
   position: absolute;
   left: 50%;
-  bottom: 20px;
+  bottom: 0;
   transform: translateX(-50%);
   margin: 0 auto;
 }
@@ -222,13 +222,14 @@
 }
 
 .parallax-pause {
-  font-size: 40px;
+  font-size: 32px;
 }
 
 .parallax-sound {
   font-size: 46px;
   margin-left: @grid-gutter-width;
   vertical-align: top;
+  margin-left: 10px;
 }
 @media all and (max-width: @screen-xs-max) {
   // Make first parallax item full height in mobile view
@@ -284,12 +285,17 @@
     }
   }
 
+  .parallax-buttons {
+    bottom: 20px;
+  }
+
   .parallax-pause {
     font-size: 54px;
   }
 
   .parallax-sound {
     font-size: 60px;
+    margin-left: 26px;
   }
 }
 @media all and (min-width: @screen-md) {
