--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -463,6 +463,10 @@ form.gdpr-accept {
     font-weight: 600;
     font-size: inherit;
   }
+
+  .gdpr-accept-text {
+    display: inline;
+  }
 }
 
 .error {
