--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -257,6 +257,7 @@
   }
 }
 // Faktaboks
+
 .factbox {
   // Default right aligned
   background-color: @factbox-bg;
@@ -464,8 +465,10 @@ form.gdpr-accept {
     font-size: inherit;
   }
 
-  .gdpr-accept-text {
-    display: inline;
+  .gdpr-label {
+    > p {
+      display: inline;
+    }
   }
 }
 
