--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -121,7 +121,8 @@
   h1 {
     text-transform: uppercase;
     font-weight: 700;
-    line-height: 1.1;
+    font-size: 30px;
+    line-height: 1.2;
   }
 
   h2 {
