Mobile gutter width

--- a/less/variables.less
+++ b/less/variables.less
@@ -498,7 +498,7 @@
 @grid-gutter-height:        23px;
 // KU specific:
 @grid-gutter-by-half:       floor((@grid-gutter-width / 2));
-@mobile-grid-gutter-width:  6px;
+@mobile-grid-gutter-width:  @grid-gutter-by-half;
 @default-col-width:         235px;
 
 // Navbar collapse
