--- a/less/faculties/science.less
+++ b/less/faculties/science.less
@@ -296,8 +296,7 @@
 
 #geonatloginform,
 .Geonat-Login .LoginLinks {
-  background: #f3f3f3;
-  padding: 5px;
+  padding: 5px 0;
   overflow: hidden;
   margin: 0;
 }
