--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -41,7 +41,7 @@
     left: 80px;
     bottom: 13px;
     letter-spacing: 0.936px;
-    padding-right: 10px;
+    margin-right: 10px;
     @media (min-width: @screen-sm) {
       left: 100px;
       bottom: 18px;
