--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -6,6 +6,7 @@
   .tilebox {
     display: flex;
     flex-direction: column;
+    position: relative;
     min-height: 1px;
     width: 100%;
     overflow: hidden;
