--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -97,6 +97,19 @@
 
 .tiles-x {
   .tiles-x-layout();
+
+  //&:not(.tiles-plugin) {
+    // &:after {
+    //   content: '';
+    //   background:linear-gradient(to bottom, rgba(@white-color,0) 0%,rgba(@white-color,1) 70%,rgba(@white-color,1) 100%);
+    //   display: block;
+    //   height: 48px;
+    //   position: absolute;
+    //   width: 100%;
+    //   left: 0;
+    //   bottom: 0;
+    // }
+  //}
 }
 
 .tiles-y {
