--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -101,7 +101,7 @@
   //&:not(.tiles-plugin) {
     // &:after {
     //   content: '';
-    //   background:linear-gradient(to bottom, rgba(@white-color,0) 0%,rgba(@white-color,1) 70%,rgba(@white-color,1) 100%);
+    //   background: -webkit-gradient(linear, left top, left bottom, from(rgba(@white-color,0)),color-stop(70%, rgba(@white-color,1)),to(rgba(@white-color,1)))
     //   display: block;
     //   height: 48px;
     //   position: absolute;
