Cleaning up comments

--- a/less/mixins/ku-gridbox-mixins.less
+++ b/less/mixins/ku-gridbox-mixins.less
@@ -1,12 +1,10 @@
-/*
-* KU gridboxes mixin - for Bootstrap templates only
-*/
-/*
-* Mobile style: All column types must behave like single column boxes regardless of template:
-*   .gcrow .gccolumn .gridbox {
-*    .all-single-column();
-*  }
-*/
+// KU gridboxes mixin - for Bootstrap templates only
+
+// Mobile style: All column types must behave like single column boxes regardless of template:
+//   .gcrow .gccolumn .gridbox {
+//    .all-single-column();
+//  }
+
 
 .all-single-column() {
   &.size1 {
@@ -91,10 +89,9 @@
     }
   }
 }
-/*
-* Tablet style: Grid front page with left menu - all boxes img left text right:
-*    .img-text-aligned();
-*/
+
+// Tablet style: Grid front page with left menu - all boxes img left text right:
+// .img-text-aligned();
 
 .img-text-aligned() {
   &.size1 {
