--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -101,7 +101,7 @@
     &:not(.tiles-plugin) {
       &:after {
         content: '';
-        background: -webkit-gradient(linear, left top, left bottom, from(rgba(@white-color,0)),color-stop(70%, rgba(@white-color,1)),to(rgba(@white-color,1)));
+        background: linear-gradient(to top, rgba(@white-color,1) 27.5%, rgba(@white-color,0));
         display: block;
         height: 48px;
         position: absolute;
