--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -94,11 +94,13 @@
 
 .ccc-table-wrapper {
   overflow: scroll;
+  background-color: @white-color;
 }
 
 .ccc-table {
   table-layout: fixed;
   color: initial;
+  background-color: @white-color;
 }
 
 .cookiefilter {
