--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -57,6 +57,8 @@
     position: relative;
     flex: 1 1 50%; // 0 1 auto?
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
     //@media all and (min-width: @screen-sm) {
     // This prevents text from overflowing the bottom of the tile in an ugly way:
     //border-bottom: solid 20px rgba(@gray-base, 0);
