--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -180,12 +180,13 @@ body:not(.FullWidthFrontpage) .double-column {
 
         .tile-body {
           display: block;
+          flex: 1;
 
           &:after {
             content: '';
-            background: linear-gradient(to top, rgba(@white-color,1) 25%, rgba(@white-color,0));
+            background: linear-gradient(to top, rgba(@white-color,1) 60%, rgba(@white-color,0));
             display: block;
-            height: 43px;
+            height: 42px;
             position: absolute;
             width: 100%;
             left: 0;
